--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "*"
 psycopg2-binary = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
+djangorestframework-simplejwt = "*"
+dj-database-url = "*"
+python-dotenv = "*" 
 
 [dev-packages]
 
